# boapy

./: .gitignore  Cargo.toml  README.md  boa.pyi  pyproject.toml
src/: lib.rs
